# openskills

./: .env.example  .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml  release.yml
skills/opennews/: SKILL.md
skills/opentrade/: API_MAPPING.md  QUICK_REFERENCE.md  README.md  install.sh
skills/opentrade/cli/: .gitignore  Cargo.toml  README.md
skills/opentrade/cli/src/: client.rs  config.rs  main.rs
skills/opentrade/cli/src/commands/: gateway.rs  market.rs  mod.rs  portfolio.rs  swap.rs  token.rs  trade.rs
skills/opentrade/opentrade-dex-swap/: SKILL.md
skills/opentrade/opentrade-gateway/: SKILL.md
skills/opentrade/opentrade-market/: SKILL.md
skills/opentrade/opentrade-newsliquid/: SKILL.md
skills/opentrade/opentrade-newsliquid/docs/: PLAN.md  TASKLIST.md
skills/opentrade/opentrade-portfolio/: SKILL.md
skills/opentrade/opentrade-token/: SKILL.md
skills/opentrade/opentrade-transaction/: SKILL.md
skills/opentrade/opentrade-wallet/: SKILL.md
skills/opentwitter/: SKILL.md
