[package]
name = "opentrade-cli"
version = "1.0.2"
edition = "2021"

[[bin]]
name = "opentrade"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dotenvy = "0.15"
dirs = "6"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
